...
            } label: {
                ZStack{
                    BottombarButtonView(image: "Habit", isActive: selectedTab == .habit)
                }
            }
            
            //Add
            Button {
                navManager.clear()
                selectedTab = .add

                    } label: {
                                VStack{
...
